<resources>
    <string name="app_name">Автобусы</string>
    <string name="app_version">Версия 1.0</string>
    <string name="author">Автор: Булгаков Слава</string>
    <string name="author_email">E-mail: slavabulgakov@gmail.com</string>
    <string name="author_email2">slavabulgakov@gmail.com</string>
    <string name="refresh">Показать</string>
    <string name="set_date">Установить дату</string>
    <string name="loading">Загрузка&#8230;</string>
    <string name="loadingSite">Загрузка сайта&#8230;</string>
    <string name="parsing">Парсинг сайта&#8230;</string>
    <string name="from">Уфа Южный АВ</string>
    <string name="to">Нефтекамск</string>
    <string name="error">Невозможно отобразить данные</string>
    <string name="empty_response_title">Нет данных</string>
    <string name="empty_response_message">По данному запросу отсутствуют данные. Возможно вы ввели не ту дату или направление маршрута.</string>
    <string name="connection_error_title">Ошибка соединения</string>
    <string name="connection_error_message">При загрузке данных произошла ошибка. Проверьте ваше подключение к сети.</string>
    <string name="form_error_title">Запрос введен неверно</string>
    <string name="form_error_message">Одно или несоклько полей (откуда, куда или дата) введено неверно.</string>
    <string name="ok">OK</string>
    <string name="cancel">Отменить</string>
    <string name="close">Закрыть</string>
    <string name="rub">руб</string>
    <string name="kop">коп</string>
    <string name="title_from">Откуда</string>
    <string name="title_to">Куда</string>
    <string name="display">Показать</string>
    <string name="about">О программе</string>
    <string name="comment">Отправить отзыв</string>
    <string name="about_alert_message">Автобусы 1.0\nАвтор: Булгаков Слава\nE-mail: slavabulgakov@gmail.com</string>
    <string name="of">из</string>
    <string name="free_seats"> мест свободно</string>
    <string name="distance">расстояние: </string>
    <string name="km">км</string>
    <string name="admob_publisher_id">a14f77109ccd833</string>
    <string name="send_btn">Отправить отзыв или сообщить о проблеме</string>
    <string name="share">Рассказать\nдрузьям:</string>
    <string name="share_error_title">Ошибка отправки сообщения</string>
    <string name="share_error_message">При загрузке данных произошла ошибка. Проверьте ваше подключение к сети.</string>
    <string name="share_error_message_duplicate">При загрузке данных произошла ошибка. Возможно схожее сообщение уже опубликовано.</string>
    <string name="share_message_title">Приложение Автобусы!</string>
    <string name="share_message">Я установил Автобусы! Удобный доступ к расписанию междугородних автобусов Башкортостана на моем телефоне. https://play.google.com/store/apps/details?id=ru.slavabulgakov.buses</string>
    <string name="share_message_twitter">Я установил Автобусы! Расписание автобусов Башкирии на моем телефоне. https://play.google.com/store/apps/details?id=ru.slavabulgakov.buses</string>
    <string name="share_cancel_title">Сообщение не опубликовано</string>
    <string name="share_cancel_message">При публикации сообщение произошла ошибка. Проверьте ваше подключение к сети.</string>
    <string name="share_success">Сообщение удачно опубликовано. Спасибо, что рассказываете друзьям о Автобусах!</string>
    <string name="twitter_get_pin_title">Получите номер</string>
    <string name="twitter_get_pin_message">Авторизируйтесь сайте Твиттера и скопируйте номер</string>
    <string name="twitter_get_pin_continue_btn">Далее</string>
    <string name="twitter_enter_pin_title">Введите номер</string>
    <string name="twitter_enter_pin_message">Вставьте номер в поле</string>
    <string name="twitter_enter_pin_get_btn">Получить номер</string>
    <string name="send_with">Отправить с помощью</string>
    <string name="split_str"> из </string>
    <string name="cancel_loading">Загрузка данных отменена</string>
    <string name="about_text">Если вы обнаружите ошибку, то не стесняйтесь, пишите. У меня нет того многообразия устройств, которое есть у вас, чтобы потестировать на них Автобусы :)</string>
    <string name="book">Бронировать</string>
    <string name="auth">Авторизация</string>
    <string name="auth_success">Авторизация выполнена успешно</string>
    <string name="auth_deny_title">Ошибка авторизации</string>
    <string name="auth_deny_mess">Возможно неверно введены логин или пароль</string>
    <string name="back">Назад</string>
    <string name="done">Готово</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="auth_error_title">Ошибка авторизации</string>
    <string name="auth_error_message">Возможно вы ввели неверно логин или пароль</string>
    <string name="order_title">Номер заказа:</string>
    <string name="none">none</string>
    <string name="date_sample">25 февр. 2012</string>
</resources>