<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/authBackBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:drawableLeft="@drawable/arrow_left2"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:text="@string/back"
                android:textSize="15sp"
                android:textColor="#FFFFFF" android:padding="10dp" android:layout_marginBottom="10dp" android:layout_marginLeft="10dp" android:layout_marginTop="10dp"/>
            
            <Button
                android:id="@+id/authDoneBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_bg"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:text="@string/done"
                android:textSize="15sp"
                android:textColor="#FFFFFF" android:drawableRight="@drawable/arrow_right2" android:lines="1" android:padding="10dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/auth"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/authEditTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_view"
            android:padding="5dp"
            android:hint="@string/login"
            android:imeOptions="actionNext"
            android:text="" 
            android:layout_marginLeft="10dp" 
            android:layout_marginRight="10dp" 
            android:layout_marginTop="10dp" 
            android:focusable="true" 
            android:singleLine="true" >
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/authEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_view"
            android:padding="5dp"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:text="" 
            android:layout_marginLeft="10dp" 
            android:layout_marginRight="10dp" 
            android:layout_marginTop="10dp" 
            android:focusable="true" 
            android:singleLine="true"
            android:inputType="textPassword" >
        </EditText>

</LinearLayout>